--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.26.4
-transformers==4.41.2
-torch==2.2.2
 translatepy==2.3
-fastapi==0.109.1
-uvicorn==0.27.0
 protobuf==3.20.3
 python-multipart==0.0.6
-gunicorn
+--extra-index-url https://download.pytorch.org/whl/cpu
+fastapi
+uvicorn
+transformers==4.36.2
+torch==2.0.1+cpu
