--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ translatepy==2.3
 protobuf==3.20.3
 python-multipart==0.0.6
 --extra-index-url https://download.pytorch.org/whl/cpu
-fastapi
-uvicorn
-transformers==4.36.2
-torch==2.5.1+cpu
+torch==2.2.2+cpu
+transformers==4.41.2
+translatepy==2.3
+fastapi==0.109.1
+uvicorn==0.27.0
