--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,10 @@ services:
   - type: web
     name: hate-speech-backend
     runtime: python
-    pythonVersion: "3.10.12"  # Must specify exact supported version
+    pythonVersion: "3.10.12"  # Must match runtime.txt exactly
     buildCommand: |
-      pip install --no-cache-dir --upgrade pip &&
-      pip install --no-cache-dir -r requirements.txt
+      python -m pip install --upgrade pip &&
+      python -m pip install --no-cache-dir -r requirements.txt
     startCommand: |
       python -c "
       import os;
