--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: hate-speech-backend
     runtime: python
+    pythonVersion: "3.9.16"  # Must match runtime.txt
     buildCommand: |
       python -m pip install --upgrade pip &&
       python -m pip install --no-cache-dir -r requirements.txt
