--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
-numpy==1.24.4
 translatepy==2.3
 protobuf==3.20.3
 python-multipart==0.0.6
 --index-url https://download.pytorch.org/whl/cpu
-torch==2.2.2
-transformers==4.41.2
+torch==1.13.1
+transformers==4.28.1
 translatepy==2.3
-fastapi==0.109.1
-uvicorn==0.27.0
-gunicorn==21.2.0
+fastapi==0.95.2
+uvicorn==0.22.0
+python-multipart==0.0.6
+numpy==1.21.6
+gunicorn==20.1.0
