--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-translatepy
+git+https://github.com/Animenosekai/translate-py.git
 protobuf==3.20.3
 python-multipart==0.0.6
 --index-url https://download.pytorch.org/whl/cpu
