--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,10 @@
 protobuf
-python-multipart==0.0.6
 --index-url https://download.pytorch.org/whl/cpu
-torch==1.13.1
-transformers==4.28.1
+torch==2.2.2
+transformers==4.41.2
 translatepy==2.3
-fastapi==0.95.2
-uvicorn==0.22.0
+fastapi==0.109.1
+uvicorn==0.27.0
 python-multipart==0.0.6
-numpy
-gunicorn==20.1.0
+numpy==1.26.4
+gunicorn==21.2.0
