--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-translatepy==2.3protobuf==3.20.3
+translatepy==2.3
+protobuf==3.20.3
 python-multipart==0.0.6
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2
