--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,5 @@
-protobuf==3.20.3
-torch==2.2.2
-transformers==4.41.2
-translatepy==2.3
 fastapi==0.109.1
 uvicorn==0.27.0
+better-profanity==0.7.0
 python-multipart==0.0.6
-numpy==1.26.4
 gunicorn==21.2.0
---extra-index-url https://download.pytorch.org/whl/cpu
